Fix spacing

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -2,7 +2,7 @@ body{
 	text-align: center;
 	background-color: black;
     color: white;
-    font-size: 20px;
+    font-size: 16px;
     letter-spacing: 2px;
     position: relative;
 }
@@ -34,6 +34,10 @@ header {
 
   .jumbo-section{
     padding-top: 50px;
+  }
+
+  .card-body{
+    padding: 1rem 1rem;
   }
 }
 
@@ -184,14 +188,14 @@ a {
 }
 
 .quote {
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
     padding-top: 10vh;
 }
 
 .subtitle h2 {
     font-weight: 700;
-    font-size: 46px;
+    font-size: 40px;
 
 }
 
@@ -292,6 +296,11 @@ blockquote:after {
 
 .profile-card-2:hover .profile-icons {
     right: 40px;
+}
+
+.card-body {
+  padding: 1rem 0rem;
+  letter-spacing: 1px;
 }
 
 .grid {
